Kong-Api-Gateway-Research/Kong-Solution-2/apps/1-retail-banking/5-statement.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: retail-banking-ns
  name: retail-banking-ns
---
apiVersion: v1
kind: Service
metadata:
  name: statement-svc
  namespace: retail-banking-ns
spec:
  selector:
    app: statement-svc
  ports:
    - port: 8083
      targetPort: 9093
---
# apiVersion: consul.hashicorp.com/v1alpha1
# kind: ServiceDefaults
# metadata:
#   name: statement-svc
#   namespace: retail-banking-ns
# spec:
#   protocol: "http"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statement-svc
  namespace: retail-banking-ns
  labels:
    app: statement-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statement-svc
  template:
    metadata:
      labels:
        app: statement-svc
      annotations:
        # consul.hashicorp.com/connect-inject: 'true'
        # consul.hashicorp.com/enable-metrics-merging: "false"
    spec:
      serviceAccountName: statement-svc
      containers:
        - name: statement-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9093
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
